<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categor_as"
            android:textSize="60sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="45dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ImagenCategorias"
            android:layout_marginBottom="30dp"
            android:scaleType="centerInside"/>

        <Button
            android:layout_width="263dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/registrar_material" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/papel"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vidrio"
                android:layout_marginEnd="8dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pl_stico"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hacer_seguimiento"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/an_lisis_de_las_personas_que_han_registrado_materiales_de_reciclaje"
            android:padding="16dp"
            android:background="#ffffff"
            android:gravity="center" />

    </LinearLayout>
</ScrollView>
