<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/reg_strate"
            android:textSize="55sp"
            android:textStyle="bold"
            android:layout_marginBottom="60dp"/>

        <EditText
            android:id="@+id/registerNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:hint="@string/nombre"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/registerSurnameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:hint="@string/apellidos"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/registerEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/registerContactEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:hint="@string/contacto"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t_rminos_y_condiciones"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aqu_van_los_t_rminos_y_condiciones"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/acceptRegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar_y_registrarse"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</ScrollView>
